# bequests

./: .gitignore  README.rst  pyproject.toml
bequests/: bequests.py  pretty.py
scripts/: black-files.py
