[tool.poetry]
name = "bequests"
version = "0.0.1a"
description = "Command Line HTTP Client"
authors = ["wake-code <wakecode.main@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/wake-code/bequests"
repository = "https://github.com/wake-code/bequests"
documentation = "https://github.com/wake-code/bequests/blob/README.rst"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Pygments = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
